# textual-spectess

./: .gitignore  README.md  justfile  pyproject.toml
doc/model/: Diagram1.dia
src/spectess/: __init__.py  main.py  ring.py
src/spectess/dbase/: __init__.py  model.py  schema.py
src/spectess/photometer/: builder.py  tessw.py  test.py
src/spectess/photometer/protocol/: payload.py  photinfo.py
src/spectess/tui/: application.py  controller.py
src/spectess/tui/css/: mytextualapp.tcss  spectess.tcss
src/spectess/tui/resources/about/: ack.md  description.md
src/spectess/tui/resources/css/: mytextualapp.tcss
src/spectess/tui/widgets/: label.py  wavelength.py
src/spectess/tui/widgets/about/: __init__.py  about.py  ack.md
src/spectess/utils/: argsparse.py  logging.py  misc.py
