[project]
name = "spectess"
dynamic = ["version"]
description = "Tool to acquire TESS-W sensor readings for spectral response calibration, written in Textual"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  'typing-extensions',
  # Self for Python < 3.11
  'python-decouple',
  # Get info from enviromental variables
  # Async Database stuff
  'SQLAlchemy[asyncio]',
  'alembic',
  'aiosqlite',
  # Async I/O and other utilities
  'aioserial',
  'aiohttp',
  #'exceptiongroups', # For Python < 3.11 when using TaskGroups
  #'asyncstdlib', # async counterparts such as aenumerate()
  # Textual TUI
  'textual-dev',
  "lica[aiosqlalchemy]>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/astrorafael/textual-spectess"
Repository = "https://github.com/astrorafael/textual-spectess.git"

[project.scripts]
spectess = "spectess.main:main"
schema = "spectess.dbase.schema:main"

[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
# Automatically generates a _version-py file from with Git information
# This file shold be placed in .gitignore
[tool.setuptools_scm]
write_to = "src/spectess/_version.py"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools]
script-files = [
#    "scripts/tessdb_flush",
]

# Needed for Textual CSS files
[tool.setuptools.package-data]
"spectess.tui.css" = ["*.tcss"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.sources]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"